--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,99 +17,8 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
 
-        <!-- System update settings - launches activity -->
-      <!--  <PreferenceScreen android:key="system_update_settings"
-                android:title="@string/system_update_settings_list_item_title" 
-                android:summary="@string/system_update_settings_list_item_summary">
-            <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
-        </PreferenceScreen> -->
-
-        <PreferenceScreen android:key="additional_system_update_settings"
-                          android:title="@string/additional_system_update_settings_list_item_title">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="@string/additional_system_update"
-                    android:targetClass="@string/additional_system_update_menu" />
-        </PreferenceScreen>
-
-        <!-- Device status - launches activity -->
-        <PreferenceScreen android:key="status_info"
-                android:title="@string/device_status" 
-                android:summary="@string/device_status_summary">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.android.settings"
-                    android:targetClass="com.android.settings.deviceinfo.Status" />
-        </PreferenceScreen>
-
-        <!-- CyanogenMod Updates -->
-        <PreferenceScreen android:key="cm_updates"
-                android:title="@string/cmupdate_settings_title" 
-                android:summary="@string/cmupdate_settings_summary">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.cyanogenmod.updater"
-                    android:targetClass="com.cyanogenmod.updater.UpdatesSettings" />
-        </PreferenceScreen>
-
-        <!-- Anonymous statistics - (CMStats) -->
-        <PreferenceScreen
-            android:key="cmstats"
-            android:title="@string/anonymous_statistics_title"
-            android:summary="@string/anonymous_statistics_summary"
-            android:fragment="com.android.settings.cmstats.AnonymousStats" >
-        </PreferenceScreen>
-
-        <!-- Change Log -->
-        <PreferenceScreen android:key="changelog"
-            android:title="@string/changelog_title"
-            android:fragment="com.android.settings.cyanogenmod.ChangeLog" >
-        </PreferenceScreen>
-
-        <!-- Legal Information -->
-        <PreferenceScreen
-                android:key="container"
-                android:title="@string/legal_information">
-                    
-            <!-- Note: The titles given here probably won't be used.  Instead, we programmatically
-                       fill the title with the label of the activity with the corresponding action.
-                       If there is not an activity for an action, the item will be removed from the
-                       list. -->
-
-            <!-- Copyright information -->
-            <PreferenceScreen
-                    android:key="copyright"
-                    android:title="@string/copyright_title">
-                <intent android:action="android.settings.COPYRIGHT" />
-            </PreferenceScreen>
-
-            <!-- License information -->
-            <PreferenceScreen
-                    android:key="license"
-                    android:title="@string/license_title">
-                <intent android:action="android.settings.LICENSE" />
-            </PreferenceScreen>
-
-            <!-- Terms and conditions -->
-            <PreferenceScreen
-                    android:key="terms"
-                    android:title="@string/terms_title">
-                <intent android:action="android.settings.TERMS" />
-            </PreferenceScreen>
-
-        </PreferenceScreen>
-        
-        <PreferenceScreen
-                android:key="safetylegal"
-                android:title="@string/settings_safetylegal_title">
-            <intent android:action="android.settings.SAFETY" />
-        </PreferenceScreen>
-
-        <!-- Contributors -->
-        <!-- 
-        <PreferenceScreen
-                android:key="contributors"
-                android:title="@string/contributors_title">
-            <intent android:action="android.settings.TEAM" />
-        </PreferenceScreen>
-        -->
+        <PreferenceScreen android:key="cluster_logo"
+                          android:layout="@layout/cluster_logo" />
 
         <com.android.settings.RegulatoryInfoPreference android:key="regulatory_info"
                 android:title="@string/regulatory_information" />
