--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -20,28 +20,59 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceScreen
+        android:icon="@drawable/ic_cluster_about"
+        android:fragment="com.android.settings.cluster.About"
+        android:title="@string/cluster_about" />
+
+    <PreferenceScreen
         android:key="status_bar"
+        android:icon="@drawable/ic_cluster_generalui"
+        android:summary="@string/status_bar_summary"
         android:fragment="com.android.settings.cyanogenmod.StatusBar"
         android:title="@string/status_bar_title" />
 
     <PreferenceScreen
         android:key="quick_settings_panel"
+        android:icon="@drawable/ic_cluster_tiles"
+        android:summary="@string/quick_settings_panel_summary"
         android:fragment="com.android.settings.cyanogenmod.QuickSettings"
         android:title="@string/quick_settings_panel_title" />
 
     <PreferenceScreen
+        android:key="themes_settings"
+        android:icon="@drawable/ic_settings_themes"
+        android:summary="@string/themes_summary"
+        android:title="@string/themes_settings_title">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetPackage="com.tmobile.themechooser"
+            android:targetClass="com.tmobile.themechooser.ThemeChooser" />
+    </PreferenceScreen>
+
+    <PreferenceScreen
         android:key="notification_drawer"
+        android:icon="@drawable/ic_cluster_toggles"
+        android:summary="@string/toggles_summary"
         android:fragment="com.android.settings.cyanogenmod.PowerWidget"
         android:title="@string/notification_drawer_title" />
 
     <PreferenceScreen
         android:key="power_menu"
+        android:icon="@drawable/ic_cluster_power"
+        android:summary="@string/power_menu_summary"
         android:title="@string/power_menu_title"
         android:fragment="com.android.settings.cyanogenmod.PowerMenu" />
 
-    <!-- Lock clock -->
+    <PreferenceScreen
+        android:key="lock_screen_settings"
+        android:icon="@drawable/ic_cluster_lockscreen"
+        android:summary="@string/lockscreen_summary"
+        android:fragment="com.android.settings.cyanogenmod.LockscreenInterface"
+        android:title="@string/lock_screen_title" />
+
     <PreferenceScreen
         android:key="lock_clock"
+        android:icon="@drawable/ic_cluster_lockclock"
         android:title="@string/lock_clock_title"
         android:summary="@string/lock_clock_summary">
         <intent android:action="android.intent.action.MAIN"
@@ -51,11 +82,28 @@
 
     <PreferenceScreen
         android:key="navigation_bar"
+	android:icon="@drawable/ic_cluster_navigationbar"
+        android:summary="@string/navigation_bar_summary"
         android:fragment="com.android.settings.cyanogenmod.NavBar"
         android:title="@string/navigation_bar_title" />
 
     <PreferenceScreen
+        android:key="hardware_keys"
+        android:icon="@drawable/ic_cluster_hardware_keys"
+        android:summary="@string/hardware_keys_summary"
+        android:fragment="com.android.settings.cyanogenmod.HardwareKeys"
+        android:title="@string/hardware_keys_title" />
+
+    <PreferenceScreen
+        android:key="performance_settings"
+        android:fragment="com.android.settings.cyanogenmod.PerformanceSettings"
+        android:summary="@string/performance_summary"
+        android:icon="@drawable/ic_settings_performance"
+        android:title="@string/performance_settings_title" />
+
+    <PreferenceScreen
         android:key="notification_pulse"
+        android:icon="@drawable/ic_cluster_notilight"
         android:title="@string/notification_pulse_title"
         android:fragment="com.android.settings.notificationlight.NotificationLightSettings" />
 
@@ -63,10 +111,5 @@
         android:key="battery_light"
         android:title="@string/battery_light_title"
         android:fragment="com.android.settings.notificationlight.BatteryLightSettings" />
-
-    <PreferenceScreen
-        android:key="hardware_keys"
-        android:fragment="com.android.settings.cyanogenmod.HardwareKeys"
-        android:title="@string/hardware_keys_title" />
 
 </PreferenceScreen>
